--- a/modules/odr_frontend/docker/Dockerfile.frontend.prod
+++ b/modules/odr_frontend/docker/Dockerfile.frontend.prod
@@ -6,12 +6,14 @@ ARG VITE_GIT_BRANCH
 ARG VITE_GIT_COMMIT
 ARG VITE_BUILD_TIME
 ARG VITE_APP_VERSION
+ARG ORIGIN
 
 # Set as environment variables
 ENV VITE_GIT_BRANCH=$VITE_GIT_BRANCH
 ENV VITE_GIT_COMMIT=$VITE_GIT_COMMIT
 ENV VITE_BUILD_TIME=$VITE_BUILD_TIME
 ENV VITE_APP_VERSION=$VITE_APP_VERSION
+ENV ORIGIN=$ORIGIN
 ENV NODE_ENV=production
 
 # Install dependencies
