--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -62,6 +62,7 @@
 		"@lucide/svelte": "^0.511.0",
 		"@skeletonlabs/skeleton": "^3.1.3",
 		"@skeletonlabs/skeleton-svelte": "^1.2.1",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@tailwindcss/vite": "^4.1.6",
 		"drizzle-orm": "^0.39.3",
 		"highlight.js": "11.10.0",
