--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -35,8 +35,8 @@
 		"autoprefixer": "10.4.20",
 		"dotenv": "^16.5.0",
 		"drizzle-kit": "^0.30.6",
-		"eslint": "^9.26.0",
-		"eslint-config-prettier": "^9.1.0",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^9.1.2",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.15.0",
 		"prettier": "^3.5.3",
@@ -47,7 +47,7 @@
 		"tailwindcss": "4.1.6",
 		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.31.1",
+		"typescript-eslint": "^8.38.0",
 		"vite": "^6.3.4",
 		"vitest": "^2.1.9",
 		"zod": "^3.24.3"
@@ -69,5 +69,12 @@
 		"pg": "^8.15.6",
 		"pnpm": "^10.10.0",
 		"svelte-awesome-icons": "^1.2.1"
+	},
+	"pnpm": {
+		"overrides": {
+			"esbuild@<=0.24.2": ">=0.25.0",
+			"cookie@<0.7.0": ">=0.7.0",
+			"brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12"
+		}
 	}
 }
